# cryptvault

./: .gitignore  GITHUB_SETUP.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: test.yml
config/: .gitignore  requeriments.txt
docs/: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  INSTALLATION.md  README.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md
scripts/: README.md  verify-encryption.py
scripts/linux/: README.md  batch-decrypt.sh  cleanup-sandbox.sh  daily-backup.sh  decrypt-all.sh  encrypt-by-type.sh  organized-backup.sh  rotate-passwords.sh
scripts/win/: README.md  batch-decrypt.ps1  cleanup-sandbox.ps1  daily-backup.ps1  decrypt-all.ps1  encrypt-by-type.ps1  organized-backup.ps1  rotate-passwords.ps1
src/cryptvault/: __init__.py  demo.py  file_encryption_sandbox.py
tests/: __init__.py  test_encryption.py  test_key_management.py
