[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptvault"
version = "1.0.0"
description = "Professional file encryption system using Fernet (AES-128)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pawored", email = "zogoxi-gobo52@protonmail.com"}
]
keywords = ["encryption", "cryptography", "security", "aes", "fernet", "file-encryption"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/pawored/cryptvault"
Documentation = "https://github.com/pawored/cryptvault/blob/main/docs/"
Repository = "https://github.com/pawored/cryptvault"
"Bug Reports" = "https://github.com/pawored/cryptvault/issues"

[project.scripts]
cryptvault = "cryptvault.file_encryption_sandbox:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
